Desktop responsive layout

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="text-center section section_1">
             <div class="over">
                 <h1 class="font2">Nikita &amp; Abhishek</h1>
