More images, design improvements, map link

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="favicon.png" type="image/png">
 
     <title>Abhishek Weds Nikita</title>
 
@@ -47,13 +48,19 @@
 
                 <p>Abhi was a typical north Indian brat who hogged up on every edible thing on earth and Niki was one of the high on heels sophisticated girls who would never talk to guys like him.</p>
 
+                <div class="landscapes">
+                    <img src="images/12.jpg" alt="">
+                </div>
+
                 <p>It was the second year of engineering, when the North and South clashed. Our Mr Glutton was immediately head over heels about our Ms Sophisticated.</p>
 
                 <p>Our Dadar boy was quick to figure out that Niki was from Matunga and realized that BEST could be the best way to inch closer to her.</p>
 
-                <p>It was an uphill battle for our Mr North but he ultimately managed to woo our beautiful Niki with his gentle attitude. She brought about the best in him and he made her smile.</p>
+                <div class="betweens">
+                    <img src="images/10.jpg" alt="">
+                </div>
 
-                <p>They cherished all the highs and fought all the lows and more importantly, both became better individuals since then. And when you realize you want to spend the rest of your life with somebody, you want the rest of your life to start as soon as possible.</p>
+                <p>It was an uphill battle for our Mr North but he ultimately managed to woo our beautiful Niki with his gentle attitude. She brought about the best in him and he made her smile.</p>
 
                 <div class="album">
                     <div class="left">
@@ -67,6 +74,12 @@
                     <div class="right">
                         <img src="images/2.jpg" alt="">
                     </div>
+                </div>
+
+                <p>They cherished all the highs and fought all the lows and more importantly, both became better individuals since then. And when you realize you want to spend the rest of your life with somebody, you want the rest of your life to start as soon as possible.</p>
+
+                <div class="betweens">
+                    <img src="images/7.jpg" alt="">
                 </div>
 
                 <p>So, with love in our hearts and food in our minds we wish the lovely couple a happy married life. Grow old together and more importantly grow fat together.</p>
@@ -85,13 +98,21 @@
             <div class="text">
                 <p>A complete breath of fresh air with a pure, honest soul. Meet our bride to be, Nikita Kanchan aka Niki, an Engineer and now an established digital marketer.</p>
 
+                <div class="landscapes">
+                    <img src="images/11.jpg" alt="">
+                </div>
+
                 <p>A perfect combination of Carnatic Chiroti and Mumbai Masala, she has this cool air about her which leaves a lasting impression on the people she meets. Never ever has she been a drama queen to complain about anything and has rather blended like jaggery wherever she has gone, to add up on the sweetness.</p>
+
+                <div class="landscapes">
+                    <img src="images/18.jpg" alt="">
+                </div>
+
+                <p>No doubt Abhishek went head over heels after meeting her. Her sophistication gives a lot of complex to disorganized souls around her and maybe that’s why our boy seems on toes always.</p>
 
                 <div class="betweens">
                     <img src="images/5.jpg" alt="">
                 </div>
-
-                <p>No doubt Abhishek went head over heels after meeting her. Her sophistication gives a lot of complex to disorganized souls around her and maybe that’s why our boy seems on toes always.</p>
 
                 <p>The life of every gang has finally decided to tie the knot of togetherness with our dear Mumbaikar and we cannot be more excited about it!</p>
             </div>
@@ -109,13 +130,17 @@
             <div class="text">
                 <p>Our groom to be Mr Abhishek Bhalotia, an Engineer by Education, is born and brought up in Mumbai itself. His super powers include his ability to hog on absolutely anything edible on earth and do wondersome analytics with data.</p>
 
-                <p>An ardent follower of cricket and a hardcore MI fan, he himself was a pretty good sportsman back during college. His calm demeanour, superlative sense of humour and unadultered soul makes him stand out of the rest.</p>
-
                 <div class="landscapes">
-                    <img src="images/6.jpg" alt="">
+                    <img src="images/14.jpg" alt="">
                 </div>
 
-                <p>May be that’s why Nikita our bride to be lost her heart to this super cool Mumbaikar!</p>
+                <p>An ardent follower of cricket and a hardcore MI fan, he himself was a pretty good sportsman back during college. His calm demeanour, superlative sense of humour and unadultered soul makes him stand out of the rest.</p>
+
+                <div class="betweens">
+                    <img src="images/17.jpg" alt="">
+                </div>
+
+                <p>Maybe that’s why Nikita our bride to be lost her heart to this super cool Mumbaikar!</p>
             </div>
         </div>
 
@@ -135,6 +160,10 @@
             <div class="text">
                 <p>Near Sakinaka Metro Station, Sakinaka Junction, Andheri Kurla Road</p>
                 <p>Sakinaka, Andheri East, Mumbai 400072</p>
+            </div>
+
+            <div class="directions">
+                <a href="https://goo.gl/maps/1eHP6Kc5daL2" target="_blank" class="btn btn-primary">Get Directions</a>
             </div>
         </div>
 
