Added another image

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
                     <img src="images/10.jpg" alt="">
                 </div>
 
+                <div class="betweens">
+                    <img src="images/22.jpg" alt="">
+                </div>
+
                 <p>It was an uphill battle for our Mr North but he ultimately managed to woo our beautiful Niki with his gentle attitude. She brought about the best in him and he made her smile.</p>
 
                 <div class="album">
