Added OG tags & GA code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="favicon.png" type="image/png">
 
+    <meta property="og:title" content="Abhishek Weds Nikita - 9th May 2018"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:url" content="http://abhiwedsniki.com"/>
+    <meta property="og:image" content="http://abhiwedsniki.com/images/14a.jpg"/>
+    <meta property="og:site_name" content="abhiwedsniki.com"/>
+    <meta property="og:description" content="The honour of your presence is requested at our wedding reception on Wednesday, 9th May, at 7:30 the evening @ Holiday Inn, Sakinaka, Mumbai."/>
+
     <title>Abhishek Weds Nikita</title>
 
     <!-- Latest compiled and minified CSS -->
@@ -15,6 +22,17 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/style.css?v2">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117107923-1
+    "></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-117107923-1');
+    </script>
 </head>
 <body>
     <div class="container-fluid">
