More pics added

--- a/index.html
+++ b/index.html
@@ -124,7 +124,13 @@
                     <img src="images/11.jpg" alt="">
                 </div>
 
-                <p>A perfect combination of Carnatic Chiroti and Mumbai Masala, she has this cool air about her which leaves a lasting impression on the people she meets. Never ever has she been a drama queen to complain about anything and has rather blended like jaggery wherever she has gone, to add up on the sweetness.</p>
+                <p>A perfect combination of Carnatic Chiroti and Mumbai Masala, she has this cool air about her which leaves a lasting impression on the people she meets.</p>
+
+                <div class="landscapes">
+                    <img src="images/20.jpg" alt="">
+                </div>
+
+                <p>Never ever has she been a drama queen to complain about anything and has rather blended like jaggery wherever she has gone, to add up on the sweetness.</p>
 
                 <div class="landscapes">
                     <img src="images/18.jpg" alt="">
@@ -158,11 +164,15 @@
 
                 <p>An ardent follower of cricket and a hardcore MI fan, he himself was a pretty good sportsman back during college. His calm demeanour, superlative sense of humour and unadultered soul makes him stand out of the rest.</p>
 
-                <div class="betweens">
-                    <img src="images/17.jpg" alt="">
+                <div class="landscapes">
+                    <img src="images/15.jpg" alt="">
                 </div>
 
                 <p>Maybe that’s why Nikita our bride to be lost her heart to this super cool Mumbaikar!</p>
+
+                <div class="betweens">
+                    <img src="images/17.jpg" alt="">
+                </div>
             </div>
         </div>
 
