Pizza line added

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
                     <img src="images/7.jpg" alt="">
                 </div>
 
+                <p>There couldn't be a more happy couple than two best friends, because either of them can steal each other's pizza without hesitation.</p>
+
                 <p>So, with love in our hearts and food in our minds we wish the lovely couple a happy married life. Grow old together and more importantly grow fat together.</p>
             </div>
         </div>
